# electric-demand-data

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  README.md  hello.py  index.html  mkdocs.yml  pyproject.toml  ruff.toml  security.md
ETL/: README.md  __init__.py  directories.yaml  download_annual_electricity_data.py  download_electricity_data.py  download_electricity_demand_data_Australia.py  download_electricity_demand_data_from_ENTSO-E.py  download_electricity_demand_data_of_UK.py  download_electricity_generation_data_of_Cyprus.py  download_gdp_data.py  download_population_data.py  download_population_density_data.py  download_weather_data.py  download_weather_data_from_Copernicus.py  download_weather_years.py  draw_data_availability.py  draw_gdp_coverage.py  draw_map_of_covered_countries.py  get_shapes_of_US_EIA_regions.py  get_temperature_data.py  index.html  pyproject.toml  run_all.sh  test_general_utilities.py  test_time_series_utilities.py
ETL/ETL/: index.html
ETL/data/: EPIAS_2017.xlsx
ETL/figures/: draw_sample_figures.py
ETL/retrieval/: AESO.py  BCHYDRO.py  CCEI.py  CCEI.yaml  EIA.py  ENTSO-E.py  ENTSO-E.yaml  HYDROQUEBEC.py  IESO.py  NBPOWER.py  NESO.py  TSOC.py  __init__.py  aemo.py  aemo.yaml  aemo_nem.py  aemo_nem.yaml  aemo_wem.py  aemo_wem.yaml  aemo_wem_pre.py  aeso.py  aeso.yaml  bchydro.py  bchydro.yaml  cammesa.py  cammesa.yaml  ccei.py  ccei.yaml  cen.py  cen.yaml  cenace.py  cenace.yaml  coes.py  coes.yaml  copernicus.py  eia.py  eia.yaml  emi.py  emi.yaml  entsoe.py  (+29 more)
ETL/retrievals/: aemo_nem.py  aemo_wem.py  aemo_wem.yaml  aeso.py  bchydro.py  cammesa.py  ccei.py  cen.py  cenace.py  coes.py  copernicus.py  eia.py  emi.py  entsoe.py  entsoe.yaml  epias.py  eskom.py  eskom.yaml  hydroquebec.py  ieso.py  ieso.yaml  krogd.py  krogd.yaml  nbpower.py  neso.py  nigeria.py  niti.py  niti.yaml  ntdc.py  ntdc.yaml  ons.py  pucsl.py  pucsl.yaml  sonelgaz.py  taipower.py  taipower.yaml  taiwan.py  tepco.py  tsoc.py  xm.py  (+1 more)
ETL/settings/: gegis__all_countries.yaml  gegis__countries_on_entsoe_platform.yaml
ETL/shapes/: cenace.py  eia.py  neso.py  ons.py  tepco.py
ETL/tests/: __init__.py  test_directories.py  test_entities.py  test_fetcher.py  test_figures.py  test_geospatial.py  test_shapes.py  test_time_series.py  test_uploader.py
ETL/util/: directories.py  directories.yaml  entities.py  fetcher.py  figures.py  general.py  geospatial.py  shapes.py  test_directories.py  test_entities.py  test_general.py  test_time_series.py  time_series.py
ETL/utils/: __init__.py  directories.py  directories.yaml  entities.py  fetcher.py  figures.py  geospatial.py  shapes.py  time_series.py  (+1 more)
(+697 files in other folders)
