[project]
name = "electric-demand-data"
version = "0.1.0"
description = "Electricity demand data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.5.50",
    "pytest>=8.3.4",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = [
    "import-untyped"
    ]
files = [
  "ETL/**/*.py",
]

[tool.uv.workspace]
members = ["ETL"]

[tool.pytest.ini_options]
pythonpath = [
  "ETL",
]
