[project]
name = "demandcast"
version = "0.1.0"
description = "Global hourly electricity demand forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = [
    "import-untyped"
    ]
files = [
  "ETL/**/*.py",
]

[tool.pytest.ini_options]
pythonpath = [
  "ETL",
]
