[project]
name = "etl"
version = "0.1.0"
description = "Extract Transform Load functionality for electric demand data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlite>=0.4.0",
    "beautifulsoup4>=4.13.3",
    "cartopy>=0.24.1",
    "cdsapi>=0.7.5",
    "countryinfo>=0.1.2",
    "entsoe-py>=0.6.18",
    "geopandas>=1.0.1",
    "google-cloud-storage>=3.1.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "py7zr>=0.22.0",
    "pyarrow>=19.0.0",
    "pycountry>=24.6.1",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "shapely>=2.0.7",
    "timezonefinder>=6.5.8",
    "xarray>=2025.1.2",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
